--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -191,7 +191,6 @@
   <div class="content">
     <div class="left-side">
       <mat-card appearance="outlined">
-
         <mat-card-content>
           <div>Goal: Location 1</div>
           <mat-progress-bar mode="determinate" value="60"></mat-progress-bar>
@@ -237,6 +236,16 @@
           Log a Run
         </a>
       </div>
+
+      <mat-form-field>
+        <mat-label>Enter a date range</mat-label>
+        <mat-date-range-input [rangePicker]="picker">
+          <input matStartDate placeholder="Start date">
+          <input matEndDate placeholder="End date">
+        </mat-date-range-input>
+        <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-date-range-picker #picker></mat-date-range-picker>
+      </mat-form-field>
 
     </div>
   </div>
