Cannot find node-open-geocoder module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -259,7 +259,7 @@
         required
     />
     <!-- </mat-form-field> -->
-    <button (click)="logUsername()">log username</button>
+    <button (click)="saveUserDetails()">log username</button>
   </div>
 </main>
 
