Mock ApiUrl added to app.component.ts, apiUrl is stored in environments.development.ts, that is in gitignore for the moment

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -259,7 +259,7 @@
         required
     />
     <!-- </mat-form-field> -->
-    <button (click)="saveUserDetails()">log username</button>
+    <button (click)="saveUserDetails()">enter location</button>
   </div>
 </main>
 
