Added addressCard component, Almost have users location input rendering in for loop, can't get array data to map to html component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -261,6 +261,9 @@
     <!-- </mat-form-field> -->
     <button (click)="saveUserDetails()">enter location</button>
   </div>
+  <div *ngFor="let item of apiResponse">
+    <app-address-card [addressDetails]="item"></app-address-card>
+  </div>
 </main>
 
 
