Initial username and location form fully functional

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -234,7 +234,7 @@
 
       <mat-card appearance="outlined">
         <mat-card-content>
-          <div>Name: Dale Denton</div>
+          <div>Name: {{ this.user.username}}</div>
           <div>Runs this week: 2</div>
           <div>Runs total: 44</div>
           <div>Total distance: 123km</div>
