Add a goal content appears on button click and disappears after goal address is saved to local storage

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -243,30 +243,33 @@
         </mat-card-content>
       </mat-card>
 
-      <div class="example-button-container">
+      <div class="example-button-container" (click)="addGoal()">
         <a mat-fab extended routerLink=".">
           <mat-icon>place</mat-icon>
           Add a Goal
         </a>
       </div>
-      <!-- Todo: Hide First Goal component until 'Add a Goal' is clicked  -->
-      <div class="content" >
+
+      <!-- Div appears when user selecting a goal -->
+      <div class="content" *ngIf="this.addingGoal">
+        <div class="content">
           <div>First Goal</div>
           <input
-            placeholder="Search for your first goal address"
-            [(ngModel)]=locationSearch
-            required
-        />
-        <button (click)="generateLocationList()">enter location</button>
-      </div>
-      <div class="location-cards">
-        <div *ngFor="let item of apiResponse">
-          <app-address-card 
-            [addressDetails]="item"
-            (click)="addGoal(item)">
-          </app-address-card>
+          placeholder="Search for your first goal address"
+          [(ngModel)]=locationSearch
+          required
+          />
+          <button (click)="generateLocationList()">enter location</button>
         </div>
-      </div>
+        <div class="location-cards">
+          <div *ngFor="let item of apiResponse">
+            <app-address-card 
+            [addressDetails]="item"
+            (click)="setGoal(item)">
+          </app-address-card>
+          </div>
+        </div>
+      </div>  
 
       <div class="example-button-container">
         <a mat-fab extended routerLink=".">
