distanceToGoal now calcualted and displayed on users initial firstGoal input

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -246,7 +246,7 @@
               Distance to Goal: {{ this.distanceToGoal }} {{ this.kilometers ? 'Kilometers' : 'Miles'}}
             </div>
           </div>
-          <div>Runs this week: 2</div>
+          <!-- <div>Runs this week: 2</div> -->
           <div>Runs total: {{ this.runningStats.numberOfRuns }}</div>
           <div>
             Total Distance: {{ this.runningStats.totalDistanceRan }} {{ this.kilometers ? 'Kilometers' : 'Miles'}}
