Loggin run in miles now fully functional

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -244,7 +244,7 @@
       <!-- Div appears when user selecting a goal -->
       <div class="content" *ngIf="this.addingGoal">
         <div class="content">
-          <div>First Goal</div>
+          <div>Next Goal Location</div>
           <input
           placeholder="Search for your first goal address"
           [(ngModel)]=locationSearch
